Consumer Side test for pact

--- a/backend/social/Dockerfile
+++ b/backend/social/Dockerfile
@@ -9,7 +9,11 @@ RUN apk --no-cache add \
     openssl-dev \
     make \
     python3
-RUN apk add --no-cache --virtual .build-deps gcc zlib-dev libc-dev bsd-compat-headers py-setuptools
+RUN apk add --no-cache --virtual .build-deps gcc zlib-dev libc-dev bsd-compat-headers
+RUN  apk --no-cache add ca-certificates wget bash \
+    && wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub \
+    && wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.29-r0/glibc-2.29-r0.apk \
+    && apk add glibc-2.29-r0.apk
 WORKDIR /usr/app
 COPY package.json .
 RUN yarn install
